--- a/my-app/src/Companents/Team/Carousel.css
+++ b/my-app/src/Companents/Team/Carousel.css
@@ -1,4 +1,155 @@
+.carousel-mb {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
 
+.slides-container-mb {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  height: auto;
+}
+
+.slide-mb {
+  min-width: 90%;
+  max-width: 90%;
+  padding: 5%;
+  display: flex;
+  justify-content: center; /* Центрирование слайдов по горизонтали */
+  align-items: center; /* Центрирование слайдов по вертикали */
+}
+
+.content-mb {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  border-radius: 30px;
+  height: auto;
+  min-width: 500px;
+  width: 700px;
+}
+
+.tmb-first-line{
+  overflow: hidden;
+  border-top-left-radius: 30px;
+  display: flex;
+}
+
+.tmb-first-line img{
+  width: auto;
+  height: 250px;
+}
+.tmb-first-line{
+  overflow: hidden;
+  border-top-left-radius: 30px;
+  display: flex;
+}
+.text-mb {
+  font-family: 'Montserrat';
+  color: rgb(0, 0, 0);
+  text-align: left;
+  padding: 0px;
+  font-size: 22px;
+  margin-left: 50px;
+}
+.text2-mb {
+  font-family: 'Montserrat';
+  color: rgb(0, 0, 0);
+  text-align: left;
+  padding: 0px;
+  font-size: 22px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.text2-mb p{
+  margin-top: 15px;
+}
+.text-mb p{
+  margin-bottom: 40px;
+}
+.text-mb p:first-child{
+  margin-top: 50px;
+}
+
+
+.bold-mb{
+  font-family: 'Montserrat-SemiBold';
+}
+
+.navigation-mb {
+  position: relative;
+  bottom: 10px;
+  width: 100%;
+  height: 60px;
+}
+
+.dots-mb {
+  display: flex;
+  gap: 50px;
+  justify-content: center; /* Центрирование точек */
+  position: relative;
+  top: 20px;
+}
+
+.dot-mb {
+  border: 4px solid #474747;
+  width: 10px;
+  height: 10px;
+  background-color: white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.dot-mb.active {
+  background-color: #474747;
+}
+
+.order-button-mb{
+  height: 55px;
+  width: 219px;
+  margin-right: 3%;
+  margin-top: 200px;
+  border-radius: 31px;
+  font-size: 22px;
+  font-family: 'Montserrat';
+  background-color: #474747;
+  color: white;
+  border:  1px solid white;
+  flex-shrink: 1;
+  transition: all 0.5s ease;
+}
+
+.order-button-mb:hover{
+  background-color: white;
+  border-color: #474747;
+  color:black;
+}
+
+.obrezka1-mb{
+  margin-left: 75px;
+  max-width: 740px;
+  min-width: 740px;
+  margin-bottom: 75px;
+}
+
+.obrezka2-mb{
+  margin-right: 4svw;
+  margin-left: 4svw;
+  max-width: 940px;
+  min-width: 940px;
+  margin-bottom: 4svw;
+}
+
+.obrez-but-mb{
+  margin-top: 55px;
+  margin-right: 1.7svw;
+  margin-left: 1svw;
+}
+
+
+/* ___________________________________________________________________________ */
 .carousel {
   position: relative;
   width: 100%;
@@ -57,7 +208,6 @@
   width:max-content;
   align-self: flex-end;
   font-size: 25px;
-
 }
 
 .bold{
