--- a/my-app/src/Companents/Team/Carousel.css
+++ b/my-app/src/Companents/Team/Carousel.css
@@ -21,6 +21,7 @@
   align-items: center; /* Центрирование слайдов по вертикали */
 }
 
+
 .content-mb {
   display: flex;
   flex-direction: column;
@@ -31,7 +32,17 @@
   max-width: 580px;
   width: 700px;
 }
-
+.content-mb button{
+  background-color: #47474700;
+  height: 50px;
+  border: 1px solid black;
+  border-radius: 25px;
+  margin-top: 10px;
+  min-width: 580px;
+  max-width: 580px;
+  font-family: 'Montserrat';
+  font-size: 21px;
+}
 .tmb-first-line{
   overflow: hidden;
 
@@ -41,11 +52,13 @@
   text-justify: inherit;
   margin: 0;
   font-size: 21px;
+    font-family: 'Montserrat';
+
 }
 .tmb-first-line a p{
   margin-right: 10px;
   margin-top: 0px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   text-align: justify;
 }
 
@@ -53,7 +66,7 @@
   width: 250px;
   height: auto;
   float:left;
-  margin: 0px 40px 0px 0px;
+  margin: 0px 40px 10px 0px;
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
 }
@@ -150,8 +163,8 @@
   }
   .tmb-first-line a p{
     margin-right: 10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 25px;
+    margin-bottom: 30px;
   }
   
   .tmb-first-line img{
@@ -159,6 +172,33 @@
     margin: 0px 30px 0px 0px;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 0;
+  }
+  .content-mb button{
+    background-color: #47474700;
+    height: 50px;
+    border: 1px solid black;
+    border-radius: 25px;
+    margin-top: 0px;
+    min-width: 480px;
+    max-width: 480px;
+    font-size: 21px;
+
+  }
+  .dots-mb {
+    display: flex;
+    gap: 30px;
+    justify-content: center; /* Центрирование точек */
+    position: relative;
+    top: 20px;
+  }
+  
+  .dot-mb {
+    border: 4px solid #474747;
+    width: 10px;
+    height: 10px;
+    background-color: white;
+    border-radius: 50%;
+    cursor: pointer;
   }
 }
 @media (max-width:530px) {
@@ -170,7 +210,7 @@
   .tmb-first-line a{
     text-justify: inherit;
     margin: 0;
-    font-size: 21px;
+    font-size: 20px;
   }
   .tmb-first-line a p{
     margin-right: 10px;
@@ -179,13 +219,91 @@
   }
   
   .tmb-first-line img{
-    width: 200px;
-    margin: 0px 30px 0px 0px;
+    width: 150px;
+    margin: 0px 30px 10px 0px;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 0;
   }
-}
+  .content-mb button{
+    background-color: #47474700;
+    height: 42px;
+    border: 1px solid black;
+    border-radius: 25px;
+    margin-top: 0px;
+    min-width: 390px;
+    max-width: 390px;
+    font-size: 20px;
 
+  }
+}
+@media (max-width:450px) {
+  .content-mb {
+    border-radius: 30px;
+    min-width: 310px;
+    max-width: 310px;
+  }
+  .tmb-first-line a{
+    text-justify: inherit;
+    margin: 0;
+    font-size: 18px;
+  }
+  .tmb-first-line a p{
+    margin-right: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .tmb-first-line img{
+    width: 120px;
+    margin: 0px 30px 10px 0px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 0;
+  }
+  .content-mb button{
+    background-color: #47474700;
+    height: 42px;
+    border: 1px solid black;
+    border-radius: 25px;
+    margin-top: 0px;
+    min-width: 310px;
+    max-width: 310px;
+    font-size: 18px;
+
+  }
+}
+@media (max-width:340px) {
+  .content-mb {
+    border-radius: 30px;
+    min-width: 280px;
+    max-width: 280px;
+  }
+  .tmb-first-line a{
+    text-justify: inherit;
+    margin: 0;
+    font-size: 18px;
+  }
+  .tmb-first-line a p{
+    margin-right: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .tmb-first-line img{
+    width: 120px;
+    margin: 0px 30px 10px 0px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 0;
+  }
+  .content-mb button{
+    background-color: #47474700;
+    height: 42px;
+    border: 1px solid black;
+    border-radius: 25px;
+    margin-top: 0px;
+    min-width: 280px;
+    max-width: 280px;
+    font-size: 18px;
+
+  }
+}
 /* ___________________________________________________________________________ */
 .carousel {
   position: relative;
